// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react node extension ReactContext should include all assets and globals in rendered template 1`] = `"<!doctype html><html ><head><title data-react-helmet=\\"true\\"></title><link rel=\\"stylesheet\\" href=\\"main.css\\" /><link rel=\\"stylesheet\\" href=\\"vendor.css\\" /></head><body ><div id=\\"main\\"></div><script>myVariable = \\"myValue\\"</script><script src=\\"main.js\\"></script><script src=\\"vendor.js\\"></script></body></html>"`;

exports[`react node extension ReactContext should render the template with templateData 1`] = `"<!doctype html><html ><head><title data-react-helmet=\\"true\\"></title></head><body ><div id=\\"main\\"></div></body></html>"`;

exports[`react node extension ReactContext should wrap the application in a React-Router StaticRouter 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <main />
</StaticRouter>
`;

exports[`react node extension render should execute getTemplateData 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {},
      <StaticRouter
        basename=""
        context={Object {}}
        location="/"
      >
        <div />
      </StaticRouter>,
    ],
  ],
}
`;

exports[`react node extension render should send the rendered markup to the client 1`] = `"<!doctype html><html ><head><title data-react-helmet=\\"true\\"></title></head><body ><div id=\\"main\\"><main data-reactroot=\\"\\"></main></div></body></html>"`;

exports[`react node extension side-effect components <Header /> should set headers on StaticRouter context 1`] = `null`;

exports[`react node extension side-effect components <Miss /> should set miss on StaticRouter context 1`] = `null`;

exports[`react node extension side-effect components <Status /> should set status code on StaticRouter context 1`] = `null`;
